# RepairInterface

./: README.md
demo_cpp_ready/: CMakeLists.txt  package.xml
demo_cpp_ready/launch/: demo_launch.py  interface_launch.py  ur16_launch.py
demo_cpp_ready/src/: lidar_scan.cpp  main_menu.cpp  repair_interface.cpp  surface_detection.cpp  surface_interaction.cpp  surface_visualizer.cpp  task_action.cpp
demo_py_ready/: package.xml  setup.cfg  setup.py
demo_py_ready/demo_py_ready/: repair_executer.py  repair_expo_marker.py  repair_grind.py  repair_pipe.py  repair_vacuum.py  surface_detection.py
move_commands/move_cmd_cpp/: CMakeLists.txt  package.xml
move_commands/move_cmd_cpp/src/: move3Dmouse.cpp  moveitservo3dmouse.bash
move_commands/move_cmd_py/: package.xml  setup.cfg  setup.py
move_commands/move_cmd_py/move_cmd_py/: MoveHome.py  tools.py
repair_interface/: CMakeLists.txt  package.xml
repair_interface/include/repair_interface/: ros2_menu.h
repair_interface/src/: main_menu.cpp  ros2_menu.cpp
