cmake_minimum_required(VERSION 3.8)
project(move_cmd_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)


install(TARGETS
  DESTINATION lib/${PROJECT_NAME})


ament_package()
